[package]
name = "skynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "skynet"
path = "src/skynet.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[profile.dev]
strip = true
opt-level = 2
incremental = true
lto = false

[dependencies]
indoc = "2.0.0"
